2009-05-08 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-xembed/browser.cpp
	(openvrml_xembed_browser_get_id(OpenvrmlXembedBrowser *)): Make
	sure the plug's window pointer is nonnull.

2009-05-06 Braden McDaniel  <braden@endoframe.com>

	Fixed race condition when realizing the OpenvrmlXembedBrowserPlug.

	* src/openvrml-xembed/browser.cpp
	(OpenvrmlXembedBrowserPrivate_): Changed browser_plug_set_cond to
	browser_plug_realized_cond to reflect that the condition variable
	will be signaled after the plug has been realized.
	(openvrml_xembed_browser_get_id(OpenvrmlXembedBrowser *)):
	Surround call to gtk_plug_get_id with
	gdk_threads_enter/gdk_threads_leave.
	(openvrml_xembed_browser_ready_dispatch(GSource *, GSourceFunc,
	gpointer)): Realize the browser_plug before signaling the
	condition variable.

2009-05-04 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.cpp
	(openvrml::node_traverser::traverse(const
	std::vector<boost::intrusive_ptr<node> > &)): Break out of the
	loop if the traversal has been halted.

2009-05-04 Braden McDaniel  <braden@endoframe.com>

	Initialize the viewer in openvrml::gl::viewer::checkSensitive.

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(openvrml::gl::viewer::initialize()): Return if the viewer has
	already been initialized.
	(openvrml::gl::viewer::redraw()): Moved "already-initialized"
	check to the initialize function.
	(openvrml::gl::viewer::checkSensitive(int, int, event_type)): Call
	viewer::initialize.

2009-05-03 Braden McDaniel  <braden@endoframe.com>

	Improved lod_node::do_modified only to check the currently
	applicable child node(s).

	* src/node/vrml97/lod.cpp
	(lod_node::do_modified() const): Just check current_children_.
	(lod_node::do_render_child(openvrml::viewer &,
	openvrml::rendering_context)): Update current_children_ with the
	currently appropriate "level".

2009-05-01 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml97/background.cpp